# monte-carlo-mission-reliability-sustainment

./: .gitignore  README.md  pyproject.toml
docs/: 01_problem_statement.md  02_model_assumptions.md  03_methods_monte_carlo.md  04_results_summary.md
scripts/: run_baseline.py
src/mcrmss/: __init__.py  config.py  entities.py  experiments.py  failure_models.py  logistics.py  maintenance.py  metrics.py  plotting.py  rng.py  simulation.py
