[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcrmss"
version = "0.1.0"
description = "Monte Carlo mission reliability & sustainment simulation for an ISR drone detachment."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Joshua Lee" }
]
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"